plugins {
	id 'java'
    id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'checkstyle'
	id "org.sonarqube" version "4.4.1.3373"
    id 'jacoco'
}

group = 'com.tw.coupang'
version = '0.0.1-SNAPSHOT'
description = 'payroll project'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

jacoco {
    toolVersion = "0.8.14"
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	implementation 'org.postgresql:postgresql:42.5.0'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
	testImplementation 'org.testcontainers:testcontainers'
	testImplementation 'org.testcontainers:postgresql'
	testImplementation 'org.junit.jupiter:junit-jupiter'
}

checkstyle {
	toolVersion = "10.12.0"
	configFile = file("$rootDir/checkstyle.xml")
}

tasks.withType(Checkstyle).configureEach {
	ignoreFailures = false
	showViolations = true
}

sonarqube {
	properties {
		property "sonar.projectKey", "tw-payroll-system"
		property "sonar.projectName", "tw-payroll-system"
		property "sonar.host.url", "http://localhost:9000"
		property "sonar.gradle.skipCompile", "true"
        property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
        property "sonar.coverage.exclusions", """
            **/exception/**,
            **/dto/**,
            **/entity/**,
            **/enums/**,
            **/repository/**,
            **/request/**,
            **/response/**
        """
	}
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    '**/exception/**',
                    '**/dto/**',
                    '**/entity/**',
                    '**/enums/**',
                    '**/repository/**',
                    '**/request/**',
                    '**/response/**'
            ])
        }))
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.80
            }
        }
    }
}

test.finalizedBy jacocoTestCoverageVerification
